# nlp-im-lab-2025

./: README.md  pyproject.toml  regex.ipynb
01-regex-19-12-2026/: mini_project.py  try_it_yourself_exercises.ipynb
02-01-2026-embeddings/: try_it_yourself_exercises.ipynb
02-nlp-26-12-2025/: nlp_tokenization_lab.ipynb
03-embeddings-02-01-2026/: try_it_yourself_exercises.ipynb
05-chatbot-09-01-2026/: main.ipynb
06-text-classification-23-01-2026/: try_it_yourself_exercises.ipynb
07-machine-translation-30-01-2026/: mini_project.py  try_it_yourself_exercises.ipynb
09-01-2026-chatbot/: main.ipynb  main.py  snips.py
09-01-2026-pos-ner/: try_it_yourself_exercises.ipynb
23-01-2026-text-classification/: try_it_yourself_exercises.ipynb
26-12-2025-nlp/: nlp_tokenization_lab.ipynb
